Repair nab-websocket tests